# RAG-Q-A-APP

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  CD.txt  CLAUDE.md  README-deploy.md  README.md  deploy-advanced.sh  deploy.config  deploy.sh  docker-compose-example.yml  docker-compose.yml  dockerfile  dockerfile.opt  install.sh  main.py  main_dev.py  pyproject.toml  pytest.ini  requirements.txt  test_agents_comparison.py  test_react_agent_fix.py  项目结构.md
docs/: refactoring-guide.md  refactoring-prompt.md  vector_db_design.md
evaluation/: # RAG评估系统技术实施方案.md  RAGAS-langchian.ipynb  RAGAS_dataset.ipynb  README.md  rag_evaluation.py  test.py
evaluation/config/: __init__.py  config_schema.py  validator.py
evaluation/core/: __init__.py  answer_generator.py  data_loader.py  evaluator.py  main_evaluator.py
evaluation/examples/: sample_config.yaml  sample_contexts.json  sample_contexts.txt  sample_ground_truths.json  sample_questions.json
evaluation/scripts/: import_hf_dataset.py
src/: settings.py
src/adapters/: __init__.py  chroma_adapter.py  milvus_adapter.py  vector_db_adapter.py
src/components/: __init__.py  chain_builder.py  chat_history.py  document_chunker.py  document_loader_factory.py  embedding_provider.py  file_processor.py  kb_factory.py  llm_provider.py  prompt.py  reranker_compressor.py  stream_handler.py  text_splitter_factory.py  vector_db_factory.py  vector_db_manager.py
src/components/kb/: __init__.py  document_processor.py  factory.py  file_processor.py  knowledge_manager.py  repository.py  retriever_builder.py  validator.py  vector_manager.py
src/config/: Beanie.py  Redis.py  database_manager.py  logging_config.py  logging_settings.py  mcp.config  mcp_client_manager.py  vectorDB.config  vector_db_config.py
src/factories/: __init__.py  vector_db_factory.py
src/middleware/: resTime.py
src/models/: session.py  user.py
src/router/: agentRouter.py  auth.py  chatRouter.py  healthRouter.py  knowledgeRouter.py  myllm.py  sessionRouter.py
src/schema/: __init__.py  agent.py  chat.py  health.py  knowledge.py
src/service/: ChatSev.py  assisitentSev.py  chatmessageHistory.py  file_queue_manager.py  knowledgeSev.py  langchain_agent.py  langchain_react_agent.py  langgraph_agent.py  react_agent.py  sessionSev.py  userSev.py
src/tools/: __init__.py  knowledge_tool.py  retriever_tool.py  tavily.py
src/utils/: DocumentChunker.py  Knowledge.py  Knowledge_backup.py  agent_mcp.py  batch_processor.py  dataset_distillation.py  embedding.py  format_doc_list.py  llm_modle.py  oneapi_health.py  rag_tools.py  remote_rerank.py
test/: README.md  locustfile.py  test_file_upload_async.py  test_mcp_retry_mechanism.py  test_semaphore_batch_processing.py
test/components/: test_llm_provider.py
test/evaluation/: test_evaluation_system.py
test/integration/: __init__.py
test/integration/components/: __init__.py  test_llm_provider.py
test/integration/config/: __init__.py  test_logging_config.py  test_logging_settings.py
test/integration/router/: __init__.py  test_myllm.py
test/integration/service/: test_langchain_agent.py  test_langchain_react_agent.py
test/integration/utils/: __init__.py  test_dataset_distillation.py  test_oneapi_health.py  test_remote_rerank_integration.py
test/src/utils/: test_batch_processing.py
test/unit/: __init__.py  conftest.py
test/unit/src/components/: __init__.py  test_llm_provider.py
test/unit/src/config/: test_mcp_retry_mechanism.py
test/unit/src/factories/: __init__.py
test/unit/src/service/: __init__.py  test_file_upload_async.py
test/unit/src/utils/: test_semaphore_batch_processing.py
